y.output
Terminals which are not used

   T_Void
   T_Bool
   T_Float
   T_LessEqual
   T_GreaterEqual
   T_EQ
   T_NE
   T_LeftAngle
   T_RightAngle
   T_And
   T_Or
   T_Equal
   T_MulAssign
   T_DivAssign
   T_AddAssign
   T_SubAssign
   T_While
   T_For
   T_If
   T_Else
   T_Return
   T_Break
   T_Const
   T_Uniform
   T_Layout
   T_Continue
   T_Do
   T_Inc
   T_Dec
   T_Switch
   T_Case
   T_Default
   T_In
   T_Out
   T_InOut
   T_Mat2
   T_Mat3
   T_Mat4
   T_Vec2
   T_Vec3
   T_Vec4
   T_Ivec2
   T_Ivec3
   T_Ivec4
   T_Bvec2
   T_Bvec3
   T_Bvec4
   T_Uint
   T_Uvec2
   T_Uvec3
   T_Uvec4
   T_Struct
   T_Dot
   T_Colon
   T_Question
   T_Comma
   T_Dash
   T_Plus
   T_Star
   T_Slash
   T_LeftParen
   T_RightParen
   T_LeftBracket
   T_RightBracket
   T_LeftBrace
   T_RightBrace
   T_IntConstant
   T_FloatConstant
   T_BoolConstant


Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList Decl
    3         | Decl

    4 Decl: T_Int T_Identifier T_Semicolon


Terminals, with rules where they appear

$end (0) 0
error (256)
T_Void (258)
T_Bool (259)
T_Int (260) 4
T_Float (261)
T_LessEqual (262)
T_GreaterEqual (263)
T_EQ (264)
T_NE (265)
T_LeftAngle (266)
T_RightAngle (267)
T_And (268)
T_Or (269)
T_Equal (270)
T_MulAssign (271)
T_DivAssign (272)
T_AddAssign (273)
T_SubAssign (274)
T_While (275)
T_For (276)
T_If (277)
T_Else (278)
T_Return (279)
T_Break (280)
T_Const (281)
T_Uniform (282)
T_Layout (283)
T_Continue (284)
T_Do (285)
T_Inc (286)
T_Dec (287)
T_Switch (288)
T_Case (289)
T_Default (290)
T_In (291)
T_Out (292)
T_InOut (293)
T_Mat2 (294)
T_Mat3 (295)
T_Mat4 (296)
T_Vec2 (297)
T_Vec3 (298)
T_Vec4 (299)
T_Ivec2 (300)
T_Ivec3 (301)
T_Ivec4 (302)
T_Bvec2 (303)
T_Bvec3 (304)
T_Bvec4 (305)
T_Uint (306)
T_Uvec2 (307)
T_Uvec3 (308)
T_Uvec4 (309)
T_Struct (310)
T_Semicolon (311) 4
T_Dot (312)
T_Colon (313)
T_Question (314)
T_Comma (315)
T_Dash (316)
T_Plus (317)
T_Star (318)
T_Slash (319)
T_LeftParen (320)
T_RightParen (321)
T_LeftBracket (322)
T_RightBracket (323)
T_LeftBrace (324)
T_RightBrace (325)
T_Identifier (326) 4
T_IntConstant (327)
T_FloatConstant (328)
T_BoolConstant (329)


Nonterminals, with rules where they appear

$accept (75)
    on left: 0
Program (76)
    on left: 1, on right: 0
DeclList (77)
    on left: 2 3, on right: 1 2
Decl (78)
    on left: 4, on right: 2 3


state 0

    0 $accept: . Program $end

    T_Int  shift, and go to state 1

    Program   go to state 2
    DeclList  go to state 3
    Decl      go to state 4


state 1

    4 Decl: T_Int . T_Identifier T_Semicolon

    T_Identifier  shift, and go to state 5


state 2

    0 $accept: Program . $end

    $end  shift, and go to state 6


state 3

    1 Program: DeclList .
    2 DeclList: DeclList . Decl

    T_Int  shift, and go to state 1

    $default  reduce using rule 1 (Program)

    Decl  go to state 7


state 4

    3 DeclList: Decl .

    $default  reduce using rule 3 (DeclList)


state 5

    4 Decl: T_Int T_Identifier . T_Semicolon

    T_Semicolon  shift, and go to state 8


state 6

    0 $accept: Program $end .

    $default  accept


state 7

    2 DeclList: DeclList Decl .

    $default  reduce using rule 2 (DeclList)


state 8

    4 Decl: T_Int T_Identifier T_Semicolon .

    $default  reduce using rule 4 (Decl)
